Update list classes

--- a/app/views/accept-terms.html
+++ b/app/views/accept-terms.html
@@ -17,7 +17,7 @@
       <p>We need you to read and agree to our terms and conditions.</p>
 
       <p>These set out your responsibilities when publishing content to Publish teacher training courses. This includes making sure your content:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>is relevant to the service and accurate</li>
         <li>is not offensive, inappropriate or discriminatory</li>
         <li>belongs to you</li>
