--- a/app/views/begin-research.html
+++ b/app/views/begin-research.html
@@ -16,7 +16,7 @@
       <p>This is a prototype.</p>
       <p>The data shown in this prototype:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>is old and may be out of date</li>
         <li>doesn’t represent the live version</li>
       </ul>
