--- a/app/views/course.html
+++ b/app/views/course.html
@@ -42,7 +42,7 @@
       Training locations for this course are set to ‘Running’ in <a href="#">UCAS web-link</a>, but their publish value hasn’t been set to ‘Yes’.
     </p>
     <p>These training locations will not appear in Find postgraduate teacher training:</p>
-    <ul class="list list-bullet bold">
+    <ul class="govuk-list govuk-list--bullet bold">
       <li>Matravers School (Code: M)</li>
     </ul>
     <p>
