--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -21,7 +21,7 @@
         <p>Give applicants a short description of the course.</p>
 
         <p>You could include:</p>
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>an overview of what candidates are taught</li>
           <li>how much time they’ll spend training in school</li>
           <li>how they’ll be assessed</li>
@@ -86,7 +86,7 @@
         <p>Give applicants a summary of the interview process.</p>
 
         <p>This could include:</p>
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>who’ll be interviewing them</li>
           <li>how many interviews they’ll need to attend</li>
           <li>details of any tests they’ll need to sit</li>
@@ -101,7 +101,7 @@
         <p>Tell applicants more about the schools they’ll be teaching in.</p>
 
         <p>You could include:</p>
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>how the candidate’s schools are selected</li>
           <li>the average distance candidates have to travel from home to school</li>
           <li>the age ranges they’ll be teaching (eg 11 to 16 or 11 to 18)</li>
