--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -46,7 +46,7 @@
 
           <p>Give details about the salary for this course.</p>
           <p>You should:</p>
-          <ul class="list list-bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <li>give an indication of the salary – if you don’t have the figure, say how it will be calculated (eg using the unqualified teachers’ pay scales)</li>
             <li>say whether there are any fees or others costs – if there are no fees for this course, you should also say so</li>
           </ul>
@@ -63,7 +63,7 @@
           <p>If applicable, give further details about the fees for this course.</p>
 
           <p>This could include:</p>
-          <ul class="list list-bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <li>any top up fees</li>
             <li>any other costs</li>
           </ul>
