--- a/app/views/email-qa-fail.html
+++ b/app/views/email-qa-fail.html
@@ -20,7 +20,7 @@
       </p>
 
       <p>Before your course will be published you must:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>remove unsubstantiated claims</li>
         <li>fix spelling mistakes</li>
         <li>complete missing sections</li>
