--- a/app/views/email-sign-up.html
+++ b/app/views/email-sign-up.html
@@ -21,7 +21,7 @@
 
       <p class="bold">How to create a new account</p>
 
-      <ol class="list list-number">
+      <ol class="govuk-list govuk-list--number">
         <li>
           <p>You’ll shortly receive an email from DfE Sign-in. This email will include a verification code, and a link to a page where you will need to enter this code and create a password for your new account.</p>
         </li>
