--- a/app/views/example-states.html
+++ b/app/views/example-states.html
@@ -10,7 +10,7 @@
 
   <p>Given the information shown in each row of the table, for each course, can you say:</p>
 
-  <ul class="list list-bullet">
+  <ul class="govuk-list govuk-list--bullet">
     <li>if the course be found on Find postgraduate teacher training</li>
     <li>if people can apply to this course</li>
     <li>what the status means</li>
