--- a/app/views/history/choose-outcome/index.html
+++ b/app/views/history/choose-outcome/index.html
@@ -14,7 +14,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>We currently infer the outcome with a mapping from UCAS data:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>qts: QTS</li>
         <li>postgraduate or professional (with or without QTS selected): PGCE with QTS</li>
       </ul>
