--- a/app/views/history/contact-details/index.html
+++ b/app/views/history/contact-details/index.html
@@ -71,7 +71,7 @@
       <p>A website fails validation if it is not a valid URL.</p>
 
       <p>After a website is entered we must:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>convert it to lowercase</li>
         <li>prepend `http://` if there is no protocol</li>
       </ul>
