--- a/app/views/history/copy-content-from-another-course-live/index.html
+++ b/app/views/history/copy-content-from-another-course-live/index.html
@@ -48,7 +48,7 @@
       <h2 class="govuk-heading-l">People aren’t finding the feature</h2>
 
       <p>We’ve had support requests asking where the feature is. In research people have been looking for this on:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>the course overview</li>
         <li>the course listing</li>
         <li>their first course, thinking they copy from it to another</li>
