--- a/app/views/history/copy-content-from-another-course/index.html
+++ b/app/views/history/copy-content-from-another-course/index.html
@@ -30,7 +30,7 @@
 
       <p>In <a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC">user research</a> this need continues to surface:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=11m31s">“It’s quite repetitive”</a></li>
         <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=13m34s">“Is it going to be able to copy information from one course to another?”</a></li>
         <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=22m20s">“There isn’t a mechanism to duplicate the information”</a></li>
