--- a/app/views/history/course-not-running/index.html
+++ b/app/views/history/course-not-running/index.html
@@ -22,7 +22,7 @@
       <p>The UCAS statuses are per location, not per course. Instead of repeating those statuses give an indicatication of the affect of those statuses on the course. State whether a course is running, not running, or not running because it is new.</p>
 
       <p>Courses can have 1 of 3 statuses:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Running - the course is published and applicants can see it on search</li>
         <li>Not running – the course is not published, it can’t be found on search</li>
         <li>New - not yet running – the course is not published yet because it hasn’t been set to publish on UCAS</li>
