--- a/app/views/history/course-with-variants/index.html
+++ b/app/views/history/course-with-variants/index.html
@@ -20,7 +20,7 @@
       <h3 class="govuk-heading-m remove-top-margin">Qualification variants</h3>
 
       <p>Providers set up courses with the following qualifications in UCAS:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>QTS, Postgraduate, Professional: 4661 courses</li>
         <li>QTS, Postgraduate: 3919 courses</li>
         <li>QTS: 3098 courses</li>
@@ -39,7 +39,7 @@
 
       <p>Routes:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>School Direct: 7033</li>
         <li>School Direct (salaried): 1910</li>
         <li>SCITT: 1603</li>
