--- a/app/views/history/courses-and-tabs/index.html
+++ b/app/views/history/courses-and-tabs/index.html
@@ -13,7 +13,7 @@
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
   <p>This is a visualisation of course information structured by:</p>
-  <ul class="list list-bullet">
+  <ul class="govuk-list govuk-list--bullet">
     <li>training provider metadata (eg provider name, contact details)</li>
     <li>common course information (eg about this provider or interview process)</li>
     <li>schools an organisation is associated with</li>
@@ -35,7 +35,7 @@
 
     <p class="bold">Should the page be paginated?</p>
 
-    <ul class="list list-bullet">
+    <ul class="govuk-list govuk-list--bullet">
       <li>30% of providers have only 1 or 2 courses</li>
       <li>85% of providers have 20 or fewer courses</li>
       <li>10% of providers have 50-100 courses</li>
