--- a/app/views/history/edit-title/index.html
+++ b/app/views/history/edit-title/index.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <p>An iteration on <a href="/history/new-course-2#customise-title">the initial design</a> which:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>tries out moving the title change to the end of the wizard</li>
         <li>adds guidance on titles that are/aren’t allowed</li>
       </ul>
