--- a/app/views/history/enrichment-sept-6/index.html
+++ b/app/views/history/enrichment-sept-6/index.html
@@ -18,7 +18,7 @@
       <p>This is what the service looked like when we enabled organisation and course enrichment for the first time.</p>
 
       <p>This release doesn’t include:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>editing contact details</li>
         <li>about your organisation <a href="/history/iteration-aug-23">layout improvements</a></li>
         <li>persistent validation on publish</li>
@@ -28,7 +28,7 @@
 
       <p>After launch we tested this with providers:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/6Cxgfdd85cChDjSWT">Excalibur TSA</a></li>
         <li><a href="https://lookback.io/watch/aEg6nx4WHpuwQjTJq">Learning Institute South West</a></li>
         <li><a href="https://lookback.io/watch/2E4kE9niSMwCnRCiN">UCL (in-person)</a></li>
