--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -17,14 +17,14 @@
       <h2 class="govuk-heading-l">Course content we will receive in a feed from UCAS</h2>
       <p>Assumptions about content we will receive from UCAS based on <a href="/history/ucas-course-examples">existing course data</a>.</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Course title, QAd by UCAS to meet their standards (eg subject)</li>
         <li>A list of subjects the course is associated with</li>
         <li>Whether there are part time or full time vacancies</li>
         <li>The route – school direct, school direct salaried, SCITT or higher education</li>
         <li>The qualification but <a href="/history/course-with-variants#course">with caveats</a> (QTS, Postgraduate, Professional)</li>
         <li>Campuses/locations associated with each course:
-          <ul class="list list-bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <li>Name</li>
             <li>Campus code</li>
             <li>Full or part time vacancies</li>
@@ -42,7 +42,7 @@
       <h3 class="govuk-heading-m">Further information required</h3>
 
       <p>Excluding free text fields, we also need, for each course:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Fees</li>
         <li>Salary (if salaried)</li>
         <li>Confirmation of QTS/PGCE with QTS status</li>
@@ -76,7 +76,7 @@
             <tr>
               <td>School Direct</td>
               <td>
-                <ul class="list remove-bottom-margin">
+                <ul class="govuk-list remove-bottom-margin">
                   <li>Qualification</li>
                   <li>Salary</li>
                   <li>Schools</li>
