--- a/app/views/history/iteration-aug-23/index.html
+++ b/app/views/history/iteration-aug-23/index.html
@@ -15,7 +15,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>In this iteration we:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>removed the horizontal navigation in favour of sections in the page</li>
         <li>took the course content status labels and reused them on course pages</li>
         <li>updated the ‘About your organisation’ page to be more like a course</li>
