--- a/app/views/history/location-research/index.html
+++ b/app/views/history/location-research/index.html
@@ -22,7 +22,7 @@
 
       <p>These changes weren’t intended as final designs to be shipped in the product, but more a basis for focused conversation around specific aspects of location.</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Add a locations section to the organisation page (Step 2)</li>
         <li>List organisations that candidates can choose on a locations page</li>
         <li>Create a page for each location</li>
@@ -31,7 +31,7 @@
       </ul>
 
       <h2 class="govuk-heading-l">Who did we test with?</h2>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/4tQhyScCJf2e3WcNL">West London Teaching School Alliance</a></li>
         <li><a href="https://lookback.io/watch/j7XGfjfS8Bh4WrSzz">UCL</a></li>
         <li><a href="https://lookback.io/watch/H7rjFgyTKznrKuTAo">Hertfordshire University</a></li>
