--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -19,7 +19,7 @@
       <p>We are still tightly coupled with UCAS’s course model. To avoid creating mental load between our tool and UCAS’s we are not merging organisations and their courses. Users will instead see a list of organisations that they have access to when they log in.</p>
 
       <p>Examples of ‘SCITT-schools’:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>2Schools Consortium / Oakthorpe Primary School</li>
         <li>Astra SCITT / Dr Challoner's Grammar School</li>
         <li>Bishop Ramsey Church of England School / Hillingdon SCITT</li>
@@ -45,7 +45,7 @@
 
       <h2 class="govuk-heading-m">Organisations without courses</h2>
       <p>Some organisations will have no courses because:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>they are new</li>
         <li>they are set up in UCAS so they can be listed as an accrediting provider</li>
       </ul>
