--- a/app/views/history/needs-behind-fields.html
+++ b/app/views/history/needs-behind-fields.html
@@ -15,7 +15,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>Courses are divided across 3 parts to make them easier to complete:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>About this course</li>
         <li>Course length, fees and salary</li>
         <li>Requirements</li>
