--- a/app/views/history/no-more-folding.html
+++ b/app/views/history/no-more-folding.html
@@ -22,7 +22,7 @@
 
       <h2 class="govuk-heading-l">User research</h2>
       <p>We tested folded courses with training providers:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/mbc9BNqBJjoRkinAE">West London Teaching School Alliance</a> (<a href="/history/school-direct-view">screenshots</a>)</li>
         <li><a href="https://lookback.io/watch/FoHoHPQF7B5TwrFkw">Kingston School Direct</a> (<a href="/history/kingston-school-direct">screenshots</a>)</li>
         <li><a href="https://lookback.io/watch/HwTQT7B4WGnzRR2SG">Swiss Cottage Teaching School Alliance</a></li>
