--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -36,7 +36,7 @@
       <p>As a user I need to know when there are unpublished changes so that I can publish them.</p>
 
       <p>We expect to discover further needs in research that can be prioritised and addressed in later iterations, such as:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>needing to see what has changed since the last published version</li>
         <li>needing to see a history of all published changes</li>
         <li>needing to revert a draft back to a published state</li>
@@ -52,14 +52,14 @@
       <h3 class="govuk-heading-m">State</h3>
       <p>A course or the ‘About your organisation’ section can be in one of these states:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>New: The fields are all empty</li>
         <li>Draft: The fields have been edited and those changes have not been published</li>
         <li>Published: The fields have been published and no subsequent edits have been made.</li>
       </ul>
 
       <h3 class="govuk-heading-m">Design notes</h3>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Indicate when there are unpublished changes</li>
         <li>Hide the publish action from content in published state</li>
         <li>Once published, indicate the last publish date, ‘last’ differentiates from ‘first published’</li>
