--- a/app/views/history/salary-and-fees/index.html
+++ b/app/views/history/salary-and-fees/index.html
@@ -17,7 +17,7 @@
       <p>Fee paying courses need to have some different fields to salaried courses. Courses offering a salary typically don’t have any course fees (though some courses may have top-up fees for the PGCE aspect of a course) – for these courses we shouldn’t be asking for course fees. (<a href="/history/templates#dont-use-a-template">Example of the problem</a>)</p>
 
       <p>Use different fields for school direct salaried courses and add fields to cater for:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>an explanation of the salary available</li>
         <li>clarification on whether there are any fees for this course (we can’t infer this though we could say ‘courses offering a salary usually…’, or something to that effect)</li>
         <li>more complex fee structures (eg add-ons and other costs)</li>
