--- a/app/views/history/school-direct-view/index.html
+++ b/app/views/history/school-direct-view/index.html
@@ -60,7 +60,7 @@
 
   {{ macros.screenshot('Qualification', 'qualification', '/public/images/history/school-direct-view/thumbnails/07-qualification.png', '/public/images/history/school-direct-view/07-qualification.png', '
     <p>Qualification outcomes are more complex than this. For example:</p>
-    <ul class="list list-bullet">
+    <ul class="govuk-list govuk-list--bullet">
       <li>QTS with a PGCE top-up – top-ups can vary, eg alumni PGCE, this also affects fees</li>
       <li>PGCE can vary, some have masters credits others don’t – sometimes you don’t get the PGCE if you fail the masters bit, sometimes that doesn’t matter</li>
     </ul>
