--- a/app/views/history/templates/index.html
+++ b/app/views/history/templates/index.html
@@ -31,7 +31,7 @@
 
       <h3 class="govuk-heading-m">Unmoderated sessions</h3>
 
-      <ul class="list">
+      <ul class="govuk-list">
         <li><a href="https://lookback.io/watch/Ww6yAHxHiNB95vLwR">University of Sunderland</a></li>
         <li><a href="https://lookback.io/watch/9nNasdJrSy7rJ4jYb">Surrey South Farnham</a></li>
         <li><a href="https://lookback.io/watch/PBqjHp7QFt65r5Q2x">Excalibur TSA</a></li>
@@ -51,7 +51,7 @@
 
       <h3 class="govuk-heading-m">In-person moderated sessions</h3>
 
-      <ul class="list">
+      <ul class="govuk-list">
         <li><a href="https://lookback.io/watch/6dwaSDCngbuPTiL4x">Catholic Teaching Alliance</a></li>
         <li><a href="https://lookback.io/watch/CCdNXjjh34amgbWzK">West London Teaching Schools Alliance</a></li>
         <li><a href="https://lookback.io/dfe-digital/bromley-multiple-orgs-and-templates">Bromley Schools Collegiate</a></li>
@@ -128,7 +128,7 @@
     <h3 class="govuk-heading-s">Results</h3>
     <p>Users followed our guidance and experimented with template names similar to the one suggested. Names used were:</p>
 
-    <ul class="list list-bullet">
+    <ul class="govuk-list govuk-list--bullet">
       <li>Secondary PGCE courses</li>
       <li>Primary PGCE courses</li>
       <li>Tuition fee</li>
@@ -163,7 +163,7 @@
 
   {{ macros.screenshot('Template preview', 'template-preview', '/public/images/history/templates/thumbnails/06-template-preview.png', '/public/images/history/templates/06-template-preview.png', '
     <p>A template preview needs to indicate:</p>
-    <ul class="list list-bullet">
+    <ul class="govuk-list govuk-list--bullet">
       <li>that it’s a template</li>
       <li>which bits will vary by course</li>
     </ul>
