--- a/app/views/history/the-location-problem.html
+++ b/app/views/history/the-location-problem.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <p>We know that different providers treat location differently. A provider might:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>list all of their schools as training locations on one course</li>
         <li>list each school with its own course, duplicating courses</li>
         <li>not list any school, because they are not yet known</li>
@@ -33,7 +33,7 @@
 
       <p>All our locations come from UCAS. We only know about two types of location:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>a training provider’s contact address</li>
         <li>listed training locations – these are places a candidate can apply to in UCAS Apply, not necessarily where they will spend the majority, if any, of their time when training.</li>
       </ul>
@@ -48,7 +48,7 @@
 
       <p>In user research we need to:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>understand the terminology currently used by providers to define different types of location</li>
         <li>determine their appetite for sharing location information</li>
         <li>know the blockers for providing all locations</li>
@@ -72,7 +72,7 @@
 
       <p>We’ve spoken to 3 providers:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/ivTWHyrMDfXG3ij2W">Educate Teacher Training</a> (SCITT) – <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/652967938/Call+with+Educate+Group+-+Claire">Write-up</a></li>
         <li><a href="https://lookback.io/watch/mJMixngKomcCCAhGj">Ealing Teaching School Alliance</a> (School direct) – <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/668500067/Call+with+Polly+at+Ealing+TSA">Write-up</a></li>
         <li><a href="https://lookback.io/watch/B4a3xtutcpg5i8FGn">Keele and North Staffordshire Teacher Education</a> (SCITT) – <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/685342761/Call+with+Lucy+Miller+Keele+and+North+Staffordshire+SCITT">Write-up</a></li>
@@ -112,7 +112,7 @@
 
       <p>List of location types for a Training Provider organisation:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Training Provider Headquarters - a registered address for the provider</li>
         <li>Accredited provider</li>
         <li>Administrative or admissions 'hubs' (if provider is sufficiently large)</li>
