--- a/app/views/history/ucas-course-status/index.html
+++ b/app/views/history/ucas-course-status/index.html
@@ -19,7 +19,7 @@
       <p>Add a status column to the course table, and add a row to the metadata on the course detail page.</p>
 
       <p>Statuses can be one of:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Running</li>
         <li>Suspended</li>
         <li>New</li>
