--- a/app/views/history/user-research-aug-22/index.html
+++ b/app/views/history/user-research-aug-22/index.html
@@ -18,7 +18,7 @@
 
       <p>We tested this design with 3 providers:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC">Keele and North Staffordshire Teacher Education</a></li>
         <li><a href="https://lookback.io/watch/acQugHJ6r7QFpvkMQ">West London Teaching Schools Alliance</a></li>
         <li><a href="https://lookback.io/watch/QfEkvbkjW6uCJaLYJ">Bromely Schools Collegiate</a> (<a href="https://lookback.io/watch/r7d8nZPwuqHCZNgpg">Part 2</a>)</li>
