--- a/app/views/history/vacancies/index.html
+++ b/app/views/history/vacancies/index.html
@@ -18,7 +18,7 @@
 
       <p>The design for editing vacancies must account for the following scenarios:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>a course with one training location</li>
         <li>a part time or full time course with one training location</li>
         <li>a course with many training locations</li>
