--- a/app/views/history/what-is-a-course.html
+++ b/app/views/history/what-is-a-course.html
@@ -33,7 +33,7 @@
       <p>What will training providers manage?</p>
       <p>What’s the difference between:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>A full time course vs a part time one</li>
         <li>A course from the same provider, for the same subject but with a different accrediting provider</li>
         <li>A course with a salary vs one without</li>
@@ -92,7 +92,7 @@
       <p>A [subject] and a [training provider].</p>
 
       <p>For example:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>Chemistry at UCL</li>
         <li>Chemistry at Calthorpe Park Fleet</li>
         <li>Chemistry at University of Sussex</li>
