--- a/app/views/manage.html
+++ b/app/views/manage.html
@@ -12,7 +12,7 @@
     <div class="column-two-thirds">
 
 
-      <ul class="list">
+      <ul class="govuk-list">
         <li><a href="/">{{ data['training-provider-name'] }}</a></li>
         <li><a href="/schools">Schools</a></li>
         <li><a href="/organisation">Organisation</a></li>
