--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -29,7 +29,7 @@
 
         {% set moreText %}
           <p>You will accept applications from candidates:</p>
-          <ul class="list list-bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <!-- <li>with the qualification</li> -->
             <li>who expect to have the qualification when the course begins</li>
             <li>who need to take an equivalency test</li>
