--- a/app/views/no-access.html
+++ b/app/views/no-access.html
@@ -18,7 +18,7 @@
       <p>We need more information from you before we can give you access to your organisation’s courses.</p>
 
       <p>To gain access to your organisation please:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>check that you signed up using the email address we contacted</li>
         <li>contact us to tell us which organisation you need access to</li>
       </ul>
