--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -30,7 +30,7 @@
       <h2 class="govuk-heading-l remove-top-margin">Step 1. Your organisation</h2>
 
       <p>Use this section to:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>write about your organisation</li>
         <li>set your contact details</li>
         <li>publish this information on all course pages</li>
@@ -68,7 +68,7 @@
       </h2>
 
       <p>Use this section to:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>create, preview and publish courses</li>
         <li>copy content between courses</li>
       </ul>
