--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -71,7 +71,7 @@
     <div class="column-two-thirds">
       <div class="course-contents">
         <h2 class="govuk-heading-s">Contents</h2>
-        <ul class="list">
+        <ul class="govuk-list">
           <li><a href="#section-about">About the course</a></li>
           {% if data[prefix + '-interview-process'] %}
             <li><a href="#section-interview">Interview process</a></li>
@@ -215,7 +215,7 @@
         <p>
           You’ll need these codes for the Choices section of the application form:
         </p>
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>training provider code: {{ course.providerCode }}</li>
           <li>training programme code: {{ course.programmeCode }}</li>
         </ul>
