--- a/app/views/school-autocomplete.html
+++ b/app/views/school-autocomplete.html
@@ -26,7 +26,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/locations">
-        <ul class="list" id="selected-schools-list">
+        <ul class="govuk-list" id="selected-schools-list">
           {% for s in data['partner-school'] %}
             <li>
               <h3 class="govuk-heading-s remove-bottom-margin">
