--- a/app/views/your-organisations.html
+++ b/app/views/your-organisations.html
@@ -14,7 +14,7 @@
         {{ title }}
       </h1>
 
-      <ul class="list">
+      <ul class="govuk-list">
         <li>
           <h2 class="govuk-heading-m remove-top-margin remove-bottom-margin">
             <a href="/courses">{{ data['training-provider-name']}}</a>
