--- a/app/views/about-your-organisation/edit.html
+++ b/app/views/about-your-organisation/edit.html
@@ -22,7 +22,7 @@
 
         <p>You must be specific and factual with any claims you make, and support them with evidence. For example:</p>
 
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>don’t say “our students are some of the happiest in the country”</li>
           <li>do say “the Times Educational Supplement ranked our students as 4th happiest in the country”</li>
         </ul>
@@ -49,7 +49,7 @@
         <h3 class="govuk-heading-l remove-top-margin">Training with disabilities and other needs</h3>
         <p>Say how you support candidates with disabilities and other needs. This could include candidates with:</p>
 
-        <ul class="list list-bullet">
+        <ul class="govuk-list govuk-list--bullet">
           <li>dyslexia</li>
           <li>physical, hearing and visual impairments</li>
           <li>mental health conditions</li>
