--- a/app/views/history/copy-content-from-another-course-14-sept/index.html
+++ b/app/views/history/copy-content-from-another-course-14-sept/index.html
@@ -19,7 +19,7 @@
       <p>Because of its position in the right hand column it’s too easily missed by users completing the form. For users who search for the feature because they’ve read about it, it’s missed because they’re searching on the course overview page.</p>
 
       <p>This design aims to make the feature more discoverable by:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>putting the form on each section of the course overview (behind a disclosure)</li>
         <li>moving the form from the right to below the title, in the main flow of the document (also behind a disclosure)</li>
       </ul>
@@ -29,7 +29,7 @@
       <h2 class="govuk-heading-l">Course overview</h2>
       <p>Notes on implementation:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>the disclosure must have unique but hidden text for screenreaders (like the edit links)</li>
         <li>when the form is submitted the behaviour is the same, eg the ‘About this course’ page is loaded with <a href="/history/copy-content-from-another-course-live#copying-content-on-about-this-course">the orange prompt</a></li>
       </ul>
