--- a/app/views/history/iteration-june-28/index.html
+++ b/app/views/history/iteration-june-28/index.html
@@ -17,7 +17,7 @@
       <p>As with the <a href="/history/iteration-june-26">previous iteration</a>, we ran an unmoderated research session with this design where we asked providers to complete a course listing, the user recorded their input to a <a href="https://lookback.io/watch/ACpaee3SkiuGxS5CD">session on Lookback</a>.</p>
 
       <p>In this iteration we:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>added character counts</li>
         <li>made interview process optional</li>
         <li>hid incomplete optional fields from preview</li>
