--- a/app/views/history/minimum-course-requirements/index.html
+++ b/app/views/history/minimum-course-requirements/index.html
@@ -17,13 +17,13 @@
       <p>Following on from the <a href="/history/specific-requirements">investigation into UCAS specific course requirements</a>, a design that comes towards the end of the new course wizard.</p>
 
       <p>This design aims to:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>move more providers to the most flexible default (eg option 3)</li>
         <li>make it clear what that choice means</li>
       </ul>
 
       <p>Things not yet considered in this design:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>communicating legal minimums (eg Primary requires a C in Science)</li>
         <li>applying defaults based on legal minimums</li>
         <li>what happens when you hit ‘change’</li>
