--- a/app/views/history/new-course-2/index.html
+++ b/app/views/history/new-course-2/index.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <p>This design <a href="/history/new-course">tweaks the previous wizard</a> so that:</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>fees and salary have their own page</li>
         <li>there’s a route into creating a course</li>
         <li>course creation has a success message</li>
@@ -29,13 +29,13 @@
 
       <p>We tested the shortest path with 2 providers. This excluded language, training location, fee and salary and accredited provider screens.</p>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/veykZkMozQtCAvceD">Keele and North Staffordshire Education</a> (<a href="https://lookback.io/watch/gKCGDj8zDhCiqwQ77">alternative version</a>)</li>
         <li><a href="https://lookback.io/watch/gYu2aoCo3PWyaJEHH">University of Wolverhampton</a></li>
       </ul>
 
       <p>Providers found adding a new course easy to do:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/gKCGDj8zDhCiqwQ77?t=1h15m15s">“It’s an easier to use system, seemed quicker”</a></li>
         <li><a href="https://lookback.io/watch/gYu2aoCo3PWyaJEHH?t=50m26.78s">“This looks much clearer”</a></li>
       </ul>
