--- a/app/views/history/organisation-iteration-aug-24/index.html
+++ b/app/views/history/organisation-iteration-aug-24/index.html
@@ -16,7 +16,7 @@
     <div class="column-two-thirds">
       <p>The <a href="/history/iteration-aug-23">previous iteration</a> which placed a new emphasis on ‘About your organisation’ on the homepage tested well.</p>
       <p>In this design we:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>made the steps more explicit</li>
         <li>added more detail about what the user needs to do</li>
         <li>included a prompt about copying courses</li>
