--- a/app/views/history/schools-autocomplete/index.html
+++ b/app/views/history/schools-autocomplete/index.html
@@ -24,7 +24,7 @@
       <p>Use the accessible autocomplete with the <a href="https://get-information-schools.service.gov.uk/Downloads">Edubase schools data</a>, there’s about 26,000 schools.</p>
 
       <p>Each option contains:</p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>school name</li>
         <li>town</li>
         <li>URN number</li>
