--- a/app/views/history/simplified-university-view/index.html
+++ b/app/views/history/simplified-university-view/index.html
@@ -17,7 +17,7 @@
       <p>
         Universities are the simplest provider. There are no schools to apply to and <a href="/history/imported-from-ucas">no course folding</a>.
       </p>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>remove schools link in header</li>
         <li>hide accrediting provider</li>
         <li>don’t show any of the qualification or salary study option fields</li>
