--- a/app/views/prototype.html
+++ b/app/views/prototype.html
@@ -13,7 +13,7 @@
         Manage teacher training courses prototype
       </h1>
 
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="/history">Design history</a>
         </li>
@@ -26,7 +26,7 @@
       </ul>
 
       <h2 class="govuk-heading-l">Exploratory designs</h2>
-      <ul class="list list-bullet">
+      <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="/courses">Courses with tabs</a>
         </li>
