--- a/docs/views/examples/elements/typography.html
+++ b/docs/views/examples/elements/typography.html
@@ -40,21 +40,21 @@
 
     <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
 
-    <ul class="list list-bullet">
+    <ul class="govuk-list govuk-list--bullet">
       <li>Here is a bulleted list.</li>
       <li>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</li>
       <li>Vestibulum id ligula porta felis euismod semper.</li>
       <li>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</li>
     </ul>
 
-    <ol class="list list-number">
+    <ol class="govuk-list govuk-list--number">
       <li>Here is a numbered list.</li>
       <li>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</li>
       <li>Vestibulum id ligula porta felis euismod semper.</li>
       <li>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</li>
     </ol>
 
-    <ul class="list">
+    <ul class="govuk-list">
       <li><a href="#">Related link</a></li>
       <li><a href="#">Related link</a></li>
       <li><a href="#">Related link</a></li>
